--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<div class="header__items">
 					<div class="header__logo">
 						<div class="header__title">
-							Healthy switcher
+							lol
 						</div>
 					</div>
 					<ul class="header__menu">
