--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<div class="header__items">
 					<div class="header__logo">
 						<div class="header__title">
-							lol
+							cafe
 						</div>
 					</div>
 					<ul class="header__menu">
@@ -64,7 +64,7 @@
 						<div class="hot__item">
 							<img class="hot__img" src="img/footer/ic_call.svg" alt="">
 							<div class="hot__data">
-								+38 (063)833 24 15
+								+8 800 800 88 88
 							</div>
 							<div class="hot__additionally">
 								Call Online
